<resources>
    <string name="app_name">Guildly</string>
    <string name="welcome_user1">Welcome User!!</string>
    <string name="habits">Habits</string>
    <string name="add_habit">Add Habit</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="connections_amp_friends"><![CDATA[Connections & Friends]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="connections">Connections</string>
    <string name="global_leaderboard">Global Leaderboard</string>
    <string name="habit_icon">Habit icon</string>
    <string name="friend_avatar">Friend avatar</string>
    <string name="your_profile_info">YOUR PROFILE INFO</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="about_me_optional">ABOUT ME (OPTIONAL)</string>
    <string name="choose_your_avatar">CHOOSE YOUR AVATAR</string>
    <string name="upload_a_profile_picture_to_personalize_your_account">Upload a profile picture to personalize your account</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="this_step_is_optional_you_can_always_add_a_profile_picture_later">This step is optional. You can always add a profile picture later.</string>
    <string name="create_account">CREATE ACCOUNT 🎯</string>
    <string name="step_1_of_4">STEP 1 OF 4</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="select_your_habits">Select Your Habits</string>
    <string name="review_your_information">REVIEW YOUR INFORMATION</string>
    <string name="email_example_com">email@example.com</string>
    <string name="about_me">ABOUT ME</string>
    <string name="no_about_me_provided">No about me provided</string>
    <string name="selected_habits">SELECTED HABITS</string>
    <string name="no_habits_selected">No habits selected</string>
    <string name="ready_to_create_your_account_click_create_account_below_to_get_started">Ready to create your account? Click \'Create Account\' below to get started!</string>
    <string name="app_logo">App Logo</string>
    <string name="guildly">GUILDLY ✨</string>
    <string name="build_habits_together">Build Habits Together</string>
    <string name="forgot">FORGOT?</string>
    <string name="enter">ENTER</string>
    <string name="no_account">NO ACCOUNT?</string>
    <string name="join">JOIN 🎉</string>
    <string name="weekly_challenge">WEEKLY CHALLENGE</string>
    <string name="habit_name">Habit Name</string>
    <string name="streak_0">Streak: 0</string>
    <string name="please_come_back_in_24_hours">Please come back in 24 hours</string>
    <string name="fire_icon">Fire icon</string>
    <string name="connection_amp_friends"><![CDATA[Connection & Friends]]></string>
    <string name="leaderboard_caps">LEADERBOARD</string>
    <string name="current_email">Current Email:</string>
    <string name="new_email">New Email:</string>
    <string name="update_email">Update Email</string>
    <string name="password_settings">Password Settings</string>
    <string name="current_password">Current Password:</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New Password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="email_settings">Email Settings</string>
    <string name="_5">5</string>
    <string name="_12_45_pm">12:45 PM</string>
    <string name="hey_how_s_it_going">Hey, how’s it going?</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_avatar_2">Friend Avatar</string>
    <string name="search_chats">Search chats...</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="habits_left_for_today">habits left for today to complete</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="connections_allcaps">CONNECTIONS</string>
    <string name="open_chat_list">Open Chat List</string>
    <string name="messages">Messages</string>
    <string name="type_a_friend_s_username">Type a friend\'s username</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="your_friends">Your Friends</string>
    <string name="global_leaderboard_conn">Global Leaderboard</string>
    <string name="friends">Friends</string>
    <!-- For item_friend_actions.xml -->
    <string name="profile_button">Profile</string>
    <string name="message_button">Message</string>
    <string name="delete_friend_button">Delete Friend</string>
    <string name="view_more">View More</string>
    <string name="streak">Streak</string>
    <string name="my_stats">My Stats:</string>
    <string name="you_have_drank_64oz_water_for_31_days_straight">You have drank 64oz Water for 31 days straight!!!</string>
    <string name="total_weekly_challenges_completed_0">Total Weekly Challenges Completed: 0</string>
    <string name="trophy">trophy</string>

</resources>