<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#E6E6FA">

        <TextView
            android:id="@+id/streak_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_stats"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/streak_icon"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/trophy"
            android:src="@drawable/ic_reward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streak_title"
            />

        <TextView
            android:id="@+id/streak_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/you_have_drank_64oz_water_for_31_days_straight"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/streak_icon"
            app:layout_constraintTop_toTopOf="@id/streak_icon" />

        <TextView
            android:id="@+id/total_weekly_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/total_weekly_challenges_completed_0"
            android:textColor="#1B1F3B"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/streak_icon"
            app:layout_constraintTop_toBottomOf="@id/streak_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>