<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityActivity">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/habit_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/habits_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/habits"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_add_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_habit"
            android:padding="8dp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/habit_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/leaderboard_container" />


    <LinearLayout
        android:id="@+id/leaderboard_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/habit_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/connections_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connections_amp_friends"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="0dp"
            app:layout_constraintTop_toBottomOf="@id/habit_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/leaderboard_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
